--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.11.5",
+    "bootstrap": "^5.1.3",
     "react": "^16.8.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^16.8.0",
-    "react-modal": "^3.12.1",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-youtube": "^7.13.1",
